update footer link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,4 +71,6 @@ hr {
     text-decoration: none;
     text-transform: lowercase;
     color:  #679b9b;
+    font-size: 1.2em;
+    font-weight: bold;
 }
